Updated tooltips and html files.

--- a/src/main/webapp/help-globalConfig-sparkServer.html
+++ b/src/main/webapp/help-globalConfig-sparkServer.html
@@ -1,8 +1,8 @@
 <div>
-	<p>Optionally specify the Spark server name e.g. spark.yourdomain.
+	<p>Optionally specify the Spark server name.
 	This value will be used to send Spark notifications.</p>
-	<p>Default value is <strong>api.spark.com</strong> which
+<!-- 	<p>Default value is <strong>api.spark.com</strong> which
 	will send notifications to the standard Spark.com. Change
 	this value to your internal sever if you are using the new
-	Spark server behind your corporate firewall.</p>
+	Spark server behind your corporate firewall.</p> -->
 </div>
