--- a/src/main/webapp/help-globalConfig-sparkToken.html
+++ b/src/main/webapp/help-globalConfig-sparkToken.html
@@ -1,3 +1,3 @@
 <div>
-	<p>The API authentication token to be used to send notifications to Spark. You can copy this from the settings page within Spark.</p>
+	<p>The API authentication token to be used to send notifications to Cisco Spark. You can copy this from the settings page within Spark.</p>
 </div>
