--- a/src/main/webapp/help-projectConfig-token.html
+++ b/src/main/webapp/help-projectConfig-token.html
@@ -1,7 +1,5 @@
 <div>
-<!--   <p>
-    Either a v1 admin/notification API token, or a v2 access token with send_notification scope. When left empty, the
-    token specified in the global configuration will be used. The type of the token depends on whether v2 API has been
-    enabled in the global configuration.
-  </p> -->
+  <p>
+    API token required to send requests and notifications to the Cisco Spark server. When left empty, the token specified in the global configuration will be used.
+  </p>
 </div>
