Updated message properties, and updated help tooltips

--- a/src/main/resources/jenkins/plugins/spark/SparkNotifier/help.html
+++ b/src/main/resources/jenkins/plugins/spark/SparkNotifier/help.html
@@ -1,4 +1,8 @@
 <div>
-  Send build notifications to a Spark chat room.<br />
-  The Spark notifier is configured globally, but you can customize the room names per-project.
+	<p>
+		Specify the Cisco Spark room to receive notifications about a CI build and its status. The moderator of the room will have to provide their 'bearer token' to allow Jenkins to post in the room.
+	</p>
+	<p>
+		Need help getting any of the above values? <a href="https://cisco.jiveon.com/docs/DOC-58263">Click here</a>
+	</p>
 </div>
