--- a/src/main/webapp/help-projectConfig-sparkRoom.html
+++ b/src/main/webapp/help-projectConfig-sparkRoom.html
@@ -1,7 +1,7 @@
 <div>
-  <p>
-    Enter the room names to which notifications should be sent. Note that this can include names of
-    rooms OR room id numbers, e.g. "Dev Team", and that multiple values may appear comma separated.
-    While names are more readable, room numbers will not change over time and are therefore more resilient.
-  </p>
+	<p>
+		The Cisco Spark room ID that you want messages sent to.
+		<br /><br />
+		Need help getting any of the above values? <a href="https://cisco.jiveon.com/docs/DOC-58263">Click here</a>
+	</p>
 </div>
