--- a/src/main/webapp/help-projectConfig-token.html
+++ b/src/main/webapp/help-projectConfig-token.html
@@ -1,5 +1,7 @@
 <div>
-  <p>
-    API token required to send requests and notifications to the Cisco Spark server. When left empty, the token specified in the global configuration will be used.
-  </p>
+	<p>
+		Bearer token of the room's moderator.
+		<br /><br />
+		Need help getting any of the above values? <a href="https://cisco.jiveon.com/docs/DOC-58263">Click here</a>
+	</p>
 </div>
